--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,18 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="64x64"
+      href="%PUBLIC_URL%/logo.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/logo.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="apple-mobile-web-app-title" content="React PWA WWWID" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
